RSLIBS-209 Remove deprecated API for Java 9